# PC_cpp-k-means-clustering

./: .gitignore  CMakeLists.txt  main.cpp
CUDA/: CMakeLists.txt  KMeans_CUDA.cu  KMeans_CUDA.cuh  main.cu  utils.cuh
OpenMP/: CMakeLists.txt  KMeans_OMP.cpp  KMeans_OMP.h  main.cpp
benchmark/: Benchmark.cpp  Benchmark.h
cluster/: KMeans.cpp  KMeans.h  KMeans_Par.cpp  KMeans_Par.h  KMeans_Seq.cpp  KMeans_Seq.h
python_scripts/: draw_results.py  generate_dataset.py
python_scripts/utils/: __init__.py  utils.py
report/: PC_proj1_report.tex  presentation.odp  report.tex
utils/: utils.cpp  utils.h
